# Sonula

./: .gitignore
2026-01-02__Fuzz-Face-Analysis/: .gitignore  README.md  pyproject.toml
2026-01-02__Fuzz-Face-Analysis/Python/: FuzzFace_classic.py  FuzzFace_equivalent.py  FuzzFace_improvement.py  pyproject.toml
A002__Pythonを使ってLTspiceシミュレーション自動化/: 2025-10-04__PUdata__AM-Pro__run_ac_switch_scenarios__v02.py
A002__Pythonを使ってLTspiceシミュレーション自動化/Template/: Analysis_Template.xlsm  Module1.bas  Module2.bas  Module3.bas  Module4.bas  Module5.bas  Module6.bas  ~$Analysis_Template.xlsm
A002__Pythonを使ってLTspiceシミュレーション自動化/asc/: AM-Pro_Analysis.asc
A005_キャビネットIRをFFT/: fft_ir_object_windows.py
